# my-advent-of-code

./: .gitignore  README.md
2023/: README.md
2023/golang/: go.mod
2023/golang/day01/: main.go
2023/golang/internal/input/: input.go
2023/haskell/: Day01.hs  Day02.hs  advent-of-code.cabal
2023/haskell/app/: Day01.hs  Day02.hs  Day03.hs
2023/python/: day02.py  day05.py  day07.py  day12.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py
2023/python/day01/: main.py
2023/python/day03/: main.py
2023/python/day04/: main.py
2023/python/day06/: main.py
2023/python/day08/: main.py
2023/python/day09/: main.py
2023/python/day10/: main.py
2023/python/day11/: main.py
2023/python/day13/: main.py
2023/python/day14/: main.py
2023/python/day15/: main.py
